fix(picker.ts): prevent panel from clipping offscreen

--- a/src/picker.css
+++ b/src/picker.css
@@ -7,4 +7,8 @@
   /* dark background colour */
   background-color: #2c2c2c;
   outline: 2px dashed #9780ff;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
